# atomicDists

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.org  environment.yml  meson.build  meson_options.txt
CppCore/: AtomicMeasures.cc  meson.build  tiny_cli.cpp
CppCore/gtests/: TestDistOps.cc  TestEuclideanDistance.cc  TestLpDistance.cc  TestManhattanDistance.cc  TestSimpleMatrix.cc
CppCore/include/: AtomicMeasures.hpp  DistOps.hpp  Distance.hpp  EuclideanDistance.hpp  LpDistance.hpp  ManhattanDistance.hpp  SimpleMatrix.hpp
scripts/: scipy_tester.py
subprojects/: readcon.wrap
